jaeb-macros/tests/compile_fail/handler_wrong_return_type.stderr
error: #[handler] function must return `HandlerResult`
 --> tests/compile_fail/handler_wrong_return_type.rs:9:39
  |
9 | async fn on_event(event: &MyEvent) -> () {
  |                                       ^^
